@@ -1,4 +1,4 @@
-
+<?lsmb BLOCK dynatable ?>
 <table width="100%">
   <tr>
     <th class="listtop" colspan="<?lsmb columns.size ?>"><?lsmb form.title ?></th>
@@ -65,3 +65,4 @@
   <tr><td colspan="<?lsmb columns.size ?>"><hr size="3" /></td></tr>
 </table>
 
+<?lsmb END # BLOCK ?>
